--- a/config.toml
+++ b/config.toml
@@ -129,7 +129,7 @@ enableGitInfo = false
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
-  math = false
+  math = true
 
   # Highlight.js options
   #   highlight
@@ -243,22 +243,27 @@ enableGitInfo = false
   #   cv, google-scholar, arxiv, orcid, researchgate, mendeley
   #
   #   Full list: https://jpswalsh.github.io/academicons/
-
+# 
+#   [[params.social]]
+#     icon = "envelope"
+#     icon_pack = "fas"
+#     link = "mailto:tgeisler@stanford.edu"  # For a direct email link, use "mailto:test@example.org".
+# 
   [[params.social]]
-    icon = "envelope"
-    icon_pack = "fas"
-    link = "mailto:tgeisler@stanford.edu"  # For a direct email link, use "mailto:test@example.org".
-
+    icon = "github"
+    icon_pack = "fab"
+    link = "https://github.com/taylorGeisler"
+    
+  [[params.social]]
+    icon = "behance"
+    icon_pack = "fab"
+    link = "https://www.behance.net/tsgeisler"
+     
   [[params.social]]
     icon = "linkedin"
     icon_pack = "fab"
     link = "https://www.linkedin.com/in/taylorgeisler/"
-
-  [[params.social]]
-    icon = "gitlab"
-    icon_pack = "fab"
-    link = "https://gitlab.com/taylor_geisler"
-
+    
   # Link to a PDF of your resume/CV from the About widget.
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
    [[params.social]]
@@ -280,15 +285,14 @@ enableGitInfo = false
   weight = 1
 
 [[menu.main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 3
-
-[[menu.main]]
   name = "Projects"
   url = "#projects"
-  weight = 2
+  weight = 4
 
+#[[menu.main]]
+#  name = "Posts"
+#  url = "#posts"
+#  weight = 3
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
